kubernetes/civo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
  name: nginx-ingress
  namespace: default
spec:
  rules:
  - host: 18474e58-3ab2-4e5f-84f8-310e7c7aee81.lb.civo.com
    http:
      paths:
      - backend:
          service:
            name: nginx-demo
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: blog.twigslot.com
    http:
      paths:
      - backend:
          service:
            name: nginx-demo
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - 18474e58-3ab2-4e5f-84f8-310e7c7aee81.lb.civo.com
    - blog.twigslot.com
    secretName: demo
