kubernetes/civo/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingress
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Path(`/`)
      services:
        - kind: Service
          name: nginx-demo
          namespace: default
          port: http
